bond: add a simple cash token for payment
Signed-off-by: Andrew Richardson <andrew.richardson@kaleido.io>